Fixed text overlap on the login

--- a/src/Frontend/research-hub/src/components/Login.css
+++ b/src/Frontend/research-hub/src/components/Login.css
@@ -5,6 +5,10 @@
   background-size: cover;
 }
 
+.font-control {
+  font-size: 14px;
+}
+
 .space-control {
   height: 80px;
 }
